--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,3 @@
-[core]
-  excludesfile = ~/.gitignore_global
 [user]
-  name = Shanku Niyogi
+  name = Shanku S. Niyogi
   email = shankuniyogi@github.com
